# ubigeos_peru

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  justfile  mkdocs.yml  pyproject.toml  setup.py  ubigeos_template.py
.github/workflows/: ci.yaml  release.yaml
construction/: _functions.py  _utils.py  clean_macrorregiones.py  cleaning.py  crear_ccpp.py  crear_dep.py  crear_equiv.py  crear_inverted.py  crear_macrorregiones.py  crear_otros.py  crear_prov_dist.py  crear_prov_dist_glob.py  crear_ubigeo_inei.py  crear_ubigeo_reniec.py  crear_ubigeo_reniec_copy.py  directorio_cleaning.py  equivalencias_creation.py  global_creation.py  insert_entries.py  inverted_creation.py  macrorregiones_creation.py  otros_creation.py  playground.R  ubigeos_creation.py
databases/: directorio_centros_poblados.csv  equivalencia-ubigeos-oti-concytec.csv  full.csv  geodir-ubigeo-reniec.csv  municipalidades_centros_poblados_2025.csv  ubigeo_reniec_2019.csv  ubigeo_reniec_2025.csv
docs/: tutorial_15_min copy.qmd  tutorial_15_min.md
resources_readable/: departamentos.py  distritos.py  equivalencias.py  global.py  inverted.py  macrorregiones.py  otros.py  poblacion - A.1. Dataset_Valorización de Residuos Sólidos Inorgánicos a Nivel Distrital.csv  provincias.py
rust/: Cargo.toml  lib.rs
src/ubigeos_peru/: __init__.py
tests/: conftest.py  performance_pandas.py  performance_polars.py  performance_rust.py  playground.py  test_fuzzy_match.py  test_playground.py  test_ubigeo.py  test_ubigeo_performance.py  test_ubigeo_series.py  test_ubigeo_singular.py  ubigeo_test.py
ubigeos_peru/: __init__.py
ubigeos_peru/core/: __init__.py  construction.ipynb  raw.py  ubigeo.py
ubigeos_peru/others/: nombres_acentos.ipynb
ubigeos_peru/resources/: __init__.py  departamentos.py  distritos.json  (+7 more)
(+21 files in other folders)
