[project]
name = "ubigeos_peru"
version = "0.1.0"
description = "Librería de Python que convierte códigos de ubigeo en su correspondiente departamento, provincia o distrito, y viceversa, además de información suplementaria."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Michael Suárez", email = "michael-salvador@hotmail.com" }
]
keywords = ["ubigeo", "peru", "departamentos", "provincias", "distritos", "enaho"]
license = "MIT" 
dependencies = [
  "orjson"
]


[project.urls]
"Homepage" = "https://github.com/MichaelSuarez0/ubigeos_peru"

[[tool.setuptools-rust.ext-modules]]
target = "tu_libreria.ubigeos_peru"  
path = "rust/Cargo.toml"
binding = "PyO3"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"ubigeos_peru" = ["resources/*.json"]

[dependency-groups]
dev = [
    "pandas>=2.0.3",
]
