[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ubigeos-peru"
version = "0.1.0"
description = "Librería de Python que convierte códigos de ubigeo en su correspondiente departamento, provincia o distrito, y viceversa, además de información suplementaria."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Michael Suárez", email = "michael-salvador@hotmail.com" }
]
keywords = ["ubigeo", "peru", "departamentos", "provincias", "distritos", "enaho"]
license = "MIT"
dependencies = [
  "orjson"
]

[project.urls]
"Homepage" = "https://github.com/MichaelSuarez0/ubigeos_peru"

[tool.maturin]
module-name = "ubigeos_peru.ubigeos_rust"
python-source = "src"
manifest-path = "rust/Cargo.toml"

[dependency-groups]
dev = [
    "pandas>=2.0.3",
    "polars>=1.8.2",
]